--- a/index.html
+++ b/index.html
@@ -145,24 +145,24 @@
                                 <label for="name">Nombre</label>
                                 <div class="invalid-feedback" data-sb-feedback="name:required">Nombre requerido.</div>
                             </div>
-                            <!-- Numero input-->
+                            <!-- Apellido input-->
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="phone" type="tel" placeholder="(123) 456-7890" data-sb-validations="required" />
-                                <label for="phone">Phone number</label>
-                                <div class="invalid-feedback" data-sb-feedback="phone:required">A phone number is required.</div>
+                                <input class="form-control" name="apellido" id="surname" type="text" placeholder="Ingrese su apellido" data-sb-validations="required" />
+                                <label for="surname">Apellido</label>
+                                <div class="invalid-feedback" data-sb-feedback="surname:required">Apellido requerido.</div>
                             </div>
                             <!-- Email input-->
                             <div class="form-floating mb-3">
                                 <input class="form-control" id="email" type="email" placeholder="name@example.com" data-sb-validations="required,email" />
                                 <label for="email">Email address</label>
-                                <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
+                                <div class="invalid-feedback" data-sb-feedback="email:required">Email requerido.</div>
                                 <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
                             </div>
                             <!-- Mensaje input-->
                             <div class="form-floating mb-3">
                                 <textarea class="form-control" id="message" type="text" placeholder="Enter your message here..." style="height: 10rem" data-sb-validations="required"></textarea>
-                                <label for="message">Message</label>
-                                <div class="invalid-feedback" data-sb-feedback="message:required">A message is required.</div>
+                                <label for="message">Mensaje</label>
+                                <div class="invalid-feedback" data-sb-feedback="message:required">Mensaje requerido.</div>
                             </div>
                             <div class="d-none" id="submitSuccessMessage">
                                 <div class="text-center mb-3">
